--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"no test specified, all good\" && exit 0"
   },
   "repository": {
@@ -18,6 +19,10 @@
   },
   "homepage": "https://github.com/UniversityOfHelsinkiCS/oodikone2-userservice#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "nodemon": "^1.18.8",
+    "pg": "^7.7.1",
+    "sequelize": "^4.41.2"
   }
 }
